Fixing a couple of typos in research statement.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -233,7 +233,7 @@ The combination of the new method and NGS data will allow us to better assess
 the affect of sea-level fluctuations on diversification across oceanic islands
 of Southeast Asia.
 
-To complement to this work on oceanic islands, I am also working with an
+To complement this work on oceanic islands, I am also working with an
 international team of collaborators to better understand diversification in
 mainland Southeast Asia.
 My collaborators include
@@ -346,7 +346,7 @@ of the Sunda Shelf}
 % The extent of terrestrial habitat has fluctuated dramatically throughout the
 % Quaternary glacial cycles (Figure \ref{map}).
 Scattered across the Sunda Shelf of Southeast Asia, is a network of small
-continental islands that were formally part of the Sunda Peninsula during
+continental islands that were formerly part of the Sunda Peninsula during
 glacial periods.
 Most of the islands were inundated during the last interglacial highstand, and
 subsequently spent the next 100,000 years as part of the exposed Sunda Shelf
