Tailoring for amnh.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -192,6 +192,9 @@ latter to enable unprecedented power to understand historical processes of
 diversification across regions characterized by high levels of species richness
 and endemism.  Below I detail one such method, and three empirical systems that
 have inspired its development.
+Fieldwork involved in the empirical systems will result in the deposition of
+specimens and tissue samples in the Herpetology and Ambrose Monell Cryo
+Collection, respectively.
 
 % Full likelihood method
 \subsubsection*{Implementing a full-likelihood Bayesian model of
